# GMP

./: .gitignore  CMakeLists.txt  README.md
include/gmp/: callback.h  data_struct.h  log.h  nvtx_range_manager.h  profile.h  range_profiling.h  session.h  session_manager.h  util.h
src/: callback.cpp  nvtx_range_manager.cpp  profile.cpp  range_profiling.cpp  session.cpp  session_manager.cpp
wrapper/: CMakeLists.txt  README.md  build.sh  gmp_profiler_wrapper.cpp  gmp_python.py  setup.py
